Fix: Feedback button hidden in dark mode

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_feedback.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_feedback.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
 
   background-color: #242424;
+  z-index: 3;
 }
 
 #feedback-link {
